--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
     "core-js": "^2.5.4",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.1",
     "hammerjs": "^2.0.8",
+    "passport": "^0.4.0",
+    "passport-oauth": "^1.0.0",
+    "request": "^2.88.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
