--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.16.2",
     "hammerjs": "^2.0.8",
     "ibm-watson": "^4.2.1",
+    "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
