--- a/package.json
+++ b/package.json
@@ -13,42 +13,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.0",
-    "@angular/cdk": "^8.1.2",
-    "@angular/common": "^8.2.0",
-    "@angular/compiler": "^8.2.0",
-    "@angular/core": "^8.2.0",
-    "@angular/forms": "^8.2.0",
-    "@angular/material": "^8.1.2",
-    "@angular/platform-browser": "^8.2.0",
-    "@angular/platform-browser-dynamic": "^8.2.0",
-    "@angular/router": "^8.2.0",
-    "core-js": "^3.1.4",
+    "@angular/animations": "^8.2.7",
+    "@angular/cdk": "^8.2.0",
+    "@angular/common": "^8.2.7",
+    "@angular/compiler": "^8.2.7",
+    "@angular/core": "^8.2.7",
+    "@angular/forms": "^8.2.7",
+    "@angular/material": "^8.2.0",
+    "@angular/platform-browser": "^8.2.7",
+    "@angular/platform-browser-dynamic": "^8.2.7",
+    "@angular/router": "^8.2.7",
+    "core-js": "^3.2.1",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "hammerjs": "^2.0.8",
-    "ibm-watson": "^4.3.0",
+    "ibm-watson": "^4.5.1",
     "mysql": "^2.17.1",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "request": "^2.88.0",
-    "rxjs": "~6.5.2",
-    "tmi.js": "^1.4.5",
+    "rxjs": "^6.5.3",
+    "tmi.js": "^1.5.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.0"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.802.0",
-    "@angular/cli": "^8.2.0",
-    "@angular/compiler-cli": "^8.2.0",
-    "@angular/language-service": "^8.2.0",
+    "@angular-devkit/build-angular": "^0.802.2",
+    "@angular/cli": "^8.3.5",
+    "@angular/compiler-cli": "^8.2.7",
+    "@angular/language-service": "^8.2.7",
     "@types/jasmine": "~3.3.16",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~12.6.9",
-    "codelyzer": "~5.1.0",
+    "codelyzer": "^5.1.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.2.0",
